src/test/deca/context/valid/operation-unaire-not.deca
// Description:
//    Test l'opération unaire not
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

{
    !"";
}