src/test/deca/context/invalid/operation-binaire-nequals-wrong.deca
// Description:
//    Test 3.33 fail avec not equals 
//
// Resultats:
//    Ligne 11: Not equals ne s'utilise qu'avec des int, des float, des booléens ou des classes.
//
// Historique:
//    cree le 06/01/2023

{
    1 != "hello world";
}